D3 Example at 5/3 at Kirby's  D3 course.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,32 @@
 		<title>WebTemplate</title>
 		<link rel="stylesheet" type="text/css" href="css/index.css"></link>
 		<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+        <script type="text/javascript" src="js/d3.min.js"></script>
 		<script type="text/javascript" src="js/index.js"></script>
 	</head>
 	<body>
-        <p>Lee's Web Template. Hello World!</p>
+<!--         <svg width="100px" height="100px" viewBox="0 0 200 200" preserveAspectRatio="xMidYMid">
+            <circle cx="60" cy="60" r="10" ></circle>
+            <circle cx="120" cy="60" r="10" ></circle>
+            <path d="M60,100 C60,140 120,140 120,100" fill="none" stroke="black" stroke-width="10px"></path>
+        </svg>
+
+        <svg width="100px" height="100px" viewBox="0 0 200 200" preserveAspectRatio="xMidYMid">
+            <circle cx="60" cy="60" r="10" ></circle>
+            <circle cx="120" cy="60" r="10" ></circle>
+            <path d="M60,120 C60,80 120,80 120,120" fill="none" stroke="black" stroke-width="10px"></path>
+        </svg> -->
+
+        <h2>ex1</h2>
+        <svg width="900px" height="200px" viewBox="0 0 900 200" preserveAspectRatio="xMidYMid" class="ex1">
+
+
+        <h2>ex2</h2>
+        <svg width="900px" height="900px" viewBox="0 0 900 900" preserveAspectRatio="xMidYMid" class="ex2">
+
+
+        <h2>ex3</h2>
+        <svg width="900px" height="900px" viewBox="0 0 900 900" preserveAspectRatio="xMidYMid" class="ex3">
+
 	</body>
 </html>
