--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>WebTemplate</title>
+		<title>D3 Example</title>
 		<link rel="stylesheet" type="text/css" href="css/index.css"></link>
 		<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
         <script type="text/javascript" src="js/d3.min.js"></script>
