modify project structure and update modules' version.

--- a/index.html
+++ b/index.html
@@ -1,26 +1,20 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>D3 Example</title>
-		<link rel="stylesheet" type="text/css" href="css/index.css"></link>
-		<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
-        <script type="text/javascript" src="js/d3.min.js"></script>
-		<script type="text/javascript" src="js/index.js"></script>
-	</head>
-	<body>
-<!--         <svg width="100px" height="100px" viewBox="0 0 200 200" preserveAspectRatio="xMidYMid">
-            <circle cx="60" cy="60" r="10" ></circle>
-            <circle cx="120" cy="60" r="10" ></circle>
-            <path d="M60,100 C60,140 120,140 120,100" fill="none" stroke="black" stroke-width="10px"></path>
-        </svg>
+<!doctype html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="chrome=1">
+        <title>WebTemplate</title>
 
-        <svg width="100px" height="100px" viewBox="0 0 200 200" preserveAspectRatio="xMidYMid">
-            <circle cx="60" cy="60" r="10" ></circle>
-            <circle cx="120" cy="60" r="10" ></circle>
-            <path d="M60,120 C60,80 120,80 120,120" fill="none" stroke="black" stroke-width="10px"></path>
-        </svg> -->
+        <link rel="stylesheet" type="text/css" href="assets/styles/index.css"></link>
 
+        <script type="text/javascript" src="vendors/angular/1.2.16/angular.min.js"></script>
+        <script type="text/javascript" src="vendors/jquery/1.11.1/jquery-1.11.1.min.js"></script>
+        <script type="text/javascript" src="vendors/d3js/3.4.6/d3.min.js"></script>
+        <script type="text/javascript" src="vendors/semantic-ui/0.17.0/javascript/semantic.min.js"></script>
+
+        <script type="text/javascript" src="assets/scripts/index.js"></script>
+    </head>
+    <body>
         <h2>ex1</h2>
         <svg width="900px" height="200px" viewBox="0 0 900 200" preserveAspectRatio="xMidYMid" class="ex1">
 
@@ -31,6 +25,5 @@
 
         <h2>ex3</h2>
         <svg width="900px" height="900px" viewBox="0 0 900 900" preserveAspectRatio="xMidYMid" class="ex3">
-
-	</body>
+    </body>
 </html>
