Dispatch controller and add new d3 example 2 controller for 7/13 d3 training.
Signed-off-by: Lee <jessy1092@gmail.com>

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
         <script type="text/javascript" src="assets/scripts/app.js"></script>
         <script type="text/javascript" src="assets/scripts/controllers.js"></script>
+        <script type="text/javascript" src="assets/scripts/D3ex1Controller.js"></script>
+        <script type="text/javascript" src="assets/scripts/D3ex2Controller.js"></script>
     </head>
     <body>
         <div class="ui center large menu" id="menu" ng-controller="menuCtrl">
